--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -31,15 +31,16 @@
         </button>
       </ion-list>
 
-      <ion-list>
-        <ion-list-header>
-          Tutorial
-        </ion-list-header>
-        <button ion-item menuClose (click)="openTutorial()">
-          <ion-icon item-start name="hammer"></ion-icon>
-          Show Tutorial
-        </button>
-      </ion-list>
+      <!--<ion-list>-->
+        <!--<ion-list-header>-->
+          <!--Tutorial-->
+        <!--</ion-list-header>-->
+        <!--<button ion-item menuClose (click)="openTutorial()">-->
+          <!--<ion-icon item-start name="hammer"></ion-icon>-->
+          <!--Show Tutorial-->
+        <!--</button>-->
+      <!--</ion-list>-->
+
     </ion-content>
 
   </ion-menu>
@@ -75,15 +76,15 @@
         </button>
       </ion-list>
 
-      <ion-list>
-        <ion-list-header>
-          Tutorial
-        </ion-list-header>
-        <button ion-item menuClose (click)="openTutorial()">
-          <ion-icon item-start name="hammer"></ion-icon>
-          Show Tutorial
-        </button>
-      </ion-list>
+      <!--<ion-list>-->
+        <!--<ion-list-header>-->
+          <!--Tutorial-->
+        <!--</ion-list-header>-->
+        <!--<button ion-item menuClose (click)="openTutorial()">-->
+          <!--<ion-icon item-start name="hammer"></ion-icon>-->
+          <!--Show Tutorial-->
+        <!--</button>-->
+      <!--</ion-list>-->
 
     </ion-content>
 
