--- a/src/pages/polls/polls.scss
+++ b/src/pages/polls/polls.scss
@@ -29,3 +29,12 @@ page-speaker-list {
     padding-right: 0;
   }
 }
+.vote {
+  &.-set {
+    .vote-icon {
+      &.--selected {
+
+      }
+    }
+  }
+}
