--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -7,9 +7,9 @@ page-user {
     min-height: 200px;
     text-align: center;
 
-    img {
-      max-width: 150px;
-    }
+    //img {
+    //  max-width: 150px;
+    //}
   }
 
   .list {
