remove virtual repeat

--- a/src/pages/tutorial/tutorial.scss
+++ b/src/pages/tutorial/tutorial.scss
@@ -1,5 +1,7 @@
 
-page-tutorial {
+page-tutorial,
+page-about
+{
   .toolbar-background {
     background: transparent;
     border-color: transparent;
